fix: add side scrollbar

--- a/async-race/src/styles/_globals.scss
+++ b/async-race/src/styles/_globals.scss
@@ -18,6 +18,7 @@ ul {
 
 body {
   background-color: #eee;
+  overflow-y: scroll;
 }
 
 #app {
@@ -27,7 +28,9 @@ body {
 }
 
 .hidden {
-  height: 0;
+  position: absolute;
+  top: -100px;
+  height: 1px;
   opacity: 0;
   visibility: hidden;
 }
